src/log/build_2024-11-29_02-51-13/proyectoT1T4/stderr.log
  File "/home/robotica/ros2_ws/src/install/proyectoT1T4/lib/python3.12/site-packages/proyectoT1T4/nodo_robot.py", line 2
    from servoController.ServoController
                                        ^
SyntaxError: invalid syntax

